# zeroone

./: .gitignore  .mcp.json  .mcp.json.example  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  qa-report.md  settings.json.example
.claude/: settings.json  settings.local.json
agents/: ai-engineer.md  architect.md  cypher.md  developer.md  memory-agent.md  morpheus.md  neo.md  oracle.md  qa.md  reviewer.md  sentinel.md  sre.md  tech_pm.md  the_architect.md  trinity.md  zeroone.md
agents/experts/: architect.md  builder.md  debater.md  dev-py.md  dev-ts.md  explorer.md  review-py.md  review-ts.md  tech-pm.md
agents/founds/: architect.md  oracle.md  sentinel.md
config/: CLAUDE.global.md  settings.base.json
hooks/: enforce-worktree.sh  memory-keeper-purge.sh  pr-docs-check.sh  qa-report.md  require-qa-evidence.sh  require-self-judge.sh  run-memory-keeper.sh  validate-task-completion.sh  verify-tests-passed.sh
hooks/tests/: test-pr-docs-check.sh  test-require-qa-evidence.sh  test-require-self-judge.sh
infra/: README.md  docker-compose.yml
mcp/github-server/: apps.json  requirements-dev.txt  requirements.txt  server.py  test_merge_pr.py
mcp/mem0-server/: migrate_memories.py  pyproject.toml  server.py
scripts/: bootstrap.sh  setup-project.sh  status.sh  sync.sh
skills/: sre-observability.md
skills/ai-engineer/: SKILL.md
skills/api-design/: SKILL.md
skills/arch-py/: SKILL.md
skills/arch-ts/: SKILL.md
skills/ci-cd/: SKILL.md
skills/design/: SKILL.md
skills/dev-methodology/: SKILL.md
tests/: test-enforce-worktree.sh
workspaces/: README.md
(+176 files in other folders)
