[project]
name = "mem0-mcp-server"
version = "0.2.0"
description = "MCP server for shared semantic memory via Qdrant + Ollama embeddings"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]==1.26.0",
    "qdrant-client==1.17.1",
    "httpx==0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
